source/MoorDyn2.h

/** @defgroup new_c_api The C API
 *  @{
 */

/// A mooring system instance
typedef struct __MoorDyn* MoorDyn;