source/Line.h

/** @addtogroup new_c_api
 *  @{
 */

/// A mooring line instance
typedef struct __MoorDynLine* MoorDynLine;
/** @brief Get the line identifier
 * @param l The Moordyn line
 * @param id The output id
 * @return MOORDYN_INVALID_VALUE if a NULL point is provided,
 * MOORDYN_SUCCESS otherwise
 */
int DECLDIR
MoorDyn_GetLineID(MoorDynLine l, int* id);
/** @brief Get the line number of segments
 *
 * The number of nodes is equal to this value plus 1
 * @param l The Moordyn line
 * @param n The output number of nodes
 * @return MOORDYN_INVALID_VALUE if a NULL line is provided, MOORDYN_SUCCESS
 * otherwise
 */
int DECLDIR
MoorDyn_GetLineN(MoorDynLine l, unsigned int* n);
/** @brief Get the line number of nodes
 * @param l The Moordyn line
 * @param n The output number of nodes
 * @return MOORDYN_INVALID_VALUE if a NULL line is provided, MOORDYN_SUCCESS
 * otherwise
 * @see MoorDyn_GetLineN()
 */
int DECLDIR
MoorDyn_GetLineNumberNodes(MoorDynLine l, unsigned int* n);
/** @brief Get the line unstretched length
 * @param l The Moordyn line
 * @param ul The output length
 * @return MOORDYN_INVALID_VALUE if a NULL line is provided, MOORDYN_SUCCESS
 * otherwise
 * @see MoorDyn_SetLineUnstretchedLength()
 */
int DECLDIR
MoorDyn_GetLineUnstretchedLength(MoorDynLine l, double* ul);
/** @brief Get a line node position
 * @param l The Moordyn line
 * @param i The node index
 * @param pos The output node position
 * @return MOORDYN_INVALID_VALUE if a NULL line is provided or if the node
 * index is bigger than the number of segments, MOORDYN_SUCCESS otherwise
 */
int DECLDIR
MoorDyn_GetLineNodePos(MoorDynLine l, unsigned int i, double pos[3]);
/** @brief Get a line node tension
 *
 * The node tension is the sum of the axial stiffness plus the internal
 * damping
 *
 * \f[
 *     \bar{T}(i) = E A \left(
 *         \frac{l(i) - l_0}{l_0}
 *         - \frac{\beta A}{l_0} \frac{\mathrm{d}l(i)}{\mathrm{d}t}
 *     \right) \bar{q}(i)
 * \f]
 *
 * with \f$l(i)\f$ and \f$l_0\f$ the stretched and unstretched segment
 * lengths respectively, \f$E\f$ the Young's modulus, \f$A\f$ the
 * transversal area, \f$\beta\f$ the internal damping coefficient and
 * \f$\bar{q}(i)\f$ the direction verctor of the segment.
 *
 * As can be appreciated, the node tension is computed at each segment. So
 * to get the node one the surrounding segments are averaged (in case of
 * line-ends the associated ending segment tension is returned)
 * @param l The Moordyn line
 * @param i The node index
 * @param t The output node tension
 * @return MOORDYN_INVALID_VALUE if a NULL line is provided or if the node
 * index is bigger than the number of segments, MOORDYN_SUCCESS otherwise
 */
int DECLDIR
MoorDyn_GetLineNodeTen(MoorDynLine l, unsigned int i, double t[3]);
/** @brief Get a line curvature at a node
 * @param l The Moordyn line
 * @param i The node index
 * @param c The output line curvature
 * @return MOORDYN_INVALID_VALUE if a NULL line is provided or if the node
 * index is bigger than the number of segments, MOORDYN_SUCCESS otherwise
 * @note The curvature is only computed if bending stiffness
 * (moordyn::Line::EI) is not zero. Otherwise the curvature of every single
 * node will be zero.
 */
int DECLDIR
MoorDyn_GetLineNodeCurv(MoorDynLine l, unsigned int i, double* c);
/** @brief Get the tension module at the end point B (the fairlead)
 * @param l The Moordyn line
 * @param t The output node tension module
 * @return MOORDYN_INVALID_VALUE if a NULL line is provided, MOORDYN_SUCCESS
 * otherwise
 */
int DECLDIR
MoorDyn_GetLineFairTen(MoorDynLine l, double* t);
/** @brief Get the maximum tension module
 * @param l The Moordyn line
 * @param t The output maximum tension module
 * @return MOORDYN_INVALID_VALUE if a NULL line is provided, MOORDYN_SUCCESS
 * otherwise
 */
int DECLDIR
MoorDyn_GetLineMaxTen(MoorDynLine l, double* t);
/** @brief Save the line to a VTK (.vtu) file
 * @param l The Moordyn line
 * @param filename The output maximum tension module
 * @return MOORDYN_SUCCESS if the file is correctly written, an error code
 * otherwise
 * @note If MoorDyn has been built without VTK support, this function will
 * return a MOORDYN_NON_IMPLEMENTED error, but it will be still available
 * anyway
 */
int DECLDIR
MoorDyn_SaveLineVTK(MoorDynLine l, const char* filename);