wrappers/rust/bindings.rs

/* automatically generated by rust-bindgen 0.63.0 */

pub const MOORDYN_ERR_LEVEL: u32 = 3;
pub const MOORDYN_WRN_LEVEL: u32 = 2;
pub const MOORDYN_MSG_LEVEL: u32 = 1;
pub const MOORDYN_DBG_LEVEL: u32 = 0;
pub const MOORDYN_NO_OUTPUT: u32 = 4096;
pub const MOORDYN_SUCCESS: u32 = 0;
pub const MOORDYN_INVALID_INPUT_FILE: i32 = -1;
pub const MOORDYN_INVALID_OUTPUT_FILE: i32 = -2;
pub const MOORDYN_INVALID_INPUT: i32 = -3;
pub const MOORDYN_NAN_ERROR: i32 = -4;
pub const MOORDYN_MEM_ERROR: i32 = -5;
pub const MOORDYN_INVALID_VALUE: i32 = -6;
pub const MOORDYN_NON_IMPLEMENTED: i32 = -7;
pub const MOORDYN_UNHANDLED_ERROR: i32 = -255;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __MoorDynWaves {
    _unused: [u8; 0],
}
#[doc = " A mooring point instance"]
pub type MoorDynWaves = *mut __MoorDynWaves;
extern "C" {
    #[doc = " @brief Get the velocity, acceleration, wave height and dynamic pressure\n at a specific positon and time\n @param waves The Waves instance\n @param x The point x coordinate\n @param y The point y coordinate\n @param z The point z coordinate\n @param U The output velocity\n @param Ud The output acceleration\n @param zeta The output wave height\n @param PDyn The output dynamic pressure\n @return 0 If the data is correctly set, an error code otherwise\n (see @ref moordyn_errors)"]
    pub fn MoorDyn_GetWavesKin(
        waves: MoorDynWaves,
        x: f64,
        y: f64,
        z: f64,
        U: *mut f64,
        Ud: *mut f64,
        zeta: *mut f64,
        PDyn: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Compute the wave number\n @param Omega The wave angular frequency\n @param g The gravity acceleration\n @param h The water depth\n @return The wave number\n @note credit: FAST source"]
    pub fn WaveNumber(Omega: f64, g: f64, h: f64) -> f64;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __MoorDynLine {
    _unused: [u8; 0],
}
#[doc = " A mooring line instance"]
pub type MoorDynLine = *mut __MoorDynLine;
extern "C" {
    #[doc = " @brief Get the line identifier\n @param l The Moordyn line\n @param id The output id\n @return MOORDYN_INVALID_VALUE if a NULL point is provided,\n MOORDYN_SUCCESS otherwise"]
    pub fn MoorDyn_GetLineID(
        l: MoorDynLine,
        id: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the line number of segments\n\n The number of nodes is equal to this value plus 1\n @param l The Moordyn line\n @param n The output number of nodes\n @return MOORDYN_INVALID_VALUE if a NULL line is provided, MOORDYN_SUCCESS\n otherwise"]
    pub fn MoorDyn_GetLineN(
        l: MoorDynLine,
        n: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the line number of nodes\n @param l The Moordyn line\n @param n The output number of nodes\n @return MOORDYN_INVALID_VALUE if a NULL line is provided, MOORDYN_SUCCESS\n otherwise\n @see MoorDyn_GetLineN()"]
    pub fn MoorDyn_GetLineNumberNodes(
        l: MoorDynLine,
        n: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the line unstretched length\n @param l The Moordyn line\n @param ul The output length\n @return MOORDYN_INVALID_VALUE if a NULL line is provided, MOORDYN_SUCCESS\n otherwise\n @see MoorDyn_GetLineN()"]
    pub fn MoorDyn_GetLineUnstretchedLength(l: MoorDynLine, ul: *mut f64) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get a line node position\n @param l The Moordyn line\n @param i The node index\n @param pos The output node position\n @return MOORDYN_INVALID_VALUE if a NULL line is provided or if the node\n index is bigger than the number of segments, MOORDYN_SUCCESS otherwise"]
    pub fn MoorDyn_GetLineNodePos(
        l: MoorDynLine,
        i: ::std::os::raw::c_uint,
        pos: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get a line node tension\n @param l The Moordyn line\n @param i The node index\n @param t The output node tension\n @return MOORDYN_INVALID_VALUE if a NULL line is provided or if the node\n index is bigger than the number of segments, MOORDYN_SUCCESS otherwise"]
    pub fn MoorDyn_GetLineNodeTen(
        l: MoorDynLine,
        i: ::std::os::raw::c_uint,
        t: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get a line curvature at a node\n @param l The Moordyn line\n @param i The node index\n @param c The output line curvature\n @return MOORDYN_INVALID_VALUE if a NULL line is provided or if the node\n index is bigger than the number of segments, MOORDYN_SUCCESS otherwise\n @note The curvature is only computed if bending stiffness\n (moordyn::Line::EI) is not zero. Otherwise the curvature of every single\n node will be zero."]
    pub fn MoorDyn_GetLineNodeCurv(
        l: MoorDynLine,
        i: ::std::os::raw::c_uint,
        c: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the tension module at the end point B (the fairlead)\n @param l The Moordyn line\n @param t The output node tension module\n @return MOORDYN_INVALID_VALUE if a NULL line is provided, MOORDYN_SUCCESS\n otherwise"]
    pub fn MoorDyn_GetLineFairTen(l: MoorDynLine, t: *mut f64) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the maximum tension module\n @param l The Moordyn line\n @param t The output maximum tension module\n @return MOORDYN_INVALID_VALUE if a NULL line is provided, MOORDYN_SUCCESS\n otherwise"]
    pub fn MoorDyn_GetLineMaxTen(l: MoorDynLine, t: *mut f64) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Save the line to a VTK (.vtu) file\n @param l The Moordyn line\n @param filename The output maximum tension module\n @return MOORDYN_SUCCESS if the file is correctly written, an error code\n otherwise\n @note If MoorDyn has been built without VTK support, this function will\n return a MOORDYN_NON_IMPLEMENTED error, but it will be still available\n anyway"]
    pub fn MoorDyn_SaveLineVTK(
        l: MoorDynLine,
        filename: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __MoorDynPoint {
    _unused: [u8; 0],
}
#[doc = " A mooring point instance"]
pub type MoorDynPoint = *mut __MoorDynPoint;
extern "C" {
    #[doc = " @brief Get the point identifier\n @param point The Moordyn point\n @param id The output id\n @return MOORDYN_INVALID_VALUE if a NULL point is provided,\n MOORDYN_SUCCESS otherwise"]
    pub fn MoorDyn_GetPointID(
        point: MoorDynPoint,
        id: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the point type\n @param point The Moordyn point\n @param t The output type\n @return MOORDYN_INVALID_VALUE if a NULL point is provided,\n MOORDYN_SUCCESS otherwise\n @see Point::types"]
    pub fn MoorDyn_GetPointType(
        point: MoorDynPoint,
        t: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the position of a point\n @param point The Moordyn point\n @param pos The output position\n @return MOORDYN_SUCCESS If the data is correctly set, an error code\n otherwise\n (see @ref moordyn_errors)"]
    pub fn MoorDyn_GetPointPos(point: MoorDynPoint, pos: *mut f64) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the velocity of a point\n @param point The Moordyn point\n @param v The output velocity\n @return MOORDYN_SUCCESS If the data is correctly set, an error code\n otherwise\n (see @ref moordyn_errors)"]
    pub fn MoorDyn_GetPointVel(point: MoorDynPoint, v: *mut f64) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the force at a point\n @param point The Moordyn point\n @param f The output force\n @return MOORDYN_SUCCESS If the data is correctly set, an error code\n otherwise\n (see @ref moordyn_errors)"]
    pub fn MoorDyn_GetPointForce(point: MoorDynPoint, f: *mut f64) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the number of connected lines\n @param point The Moordyn point\n @param n The output number of connected lines\n @return MOORDYN_SUCCESS If the data is correctly set, an error code\n otherwise\n (see @ref moordyn_errors)"]
    pub fn MoorDyn_GetPointNAttached(
        point: MoorDynPoint,
        n: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the number of connected lines\n @param point The Moordyn point\n @param i The index of the attached line\n @param l The output attached line\n @param e The output endpoint, see moordyn::EndPoints\n @return MOORDYN_SUCCESS If the data is correctly set, an error code\n otherwise\n (see @ref moordyn_errors)"]
    pub fn MoorDyn_GetPointAttached(
        point: MoorDynPoint,
        i: ::std::os::raw::c_uint,
        l: *mut MoorDynLine,
        e: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __MoorDynRod {
    _unused: [u8; 0],
}
#[doc = " A mooring line instance"]
pub type MoorDynRod = *mut __MoorDynRod;
extern "C" {
    #[doc = " @brief Get the line identifier\n @param l The Moordyn line\n @param id The output id\n @return MOORDYN_INVALID_VALUE if a NULL point is provided,\n MOORDYN_SUCCESS otherwise"]
    pub fn MoorDyn_GetRodID(l: MoorDynRod, id: *mut ::std::os::raw::c_int)
        -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the line type\n @param l The Moordyn line\n @param t The output type\n @return MOORDYN_INVALID_VALUE if a NULL point is provided,\n MOORDYN_SUCCESS otherwise"]
    pub fn MoorDyn_GetRodType(
        l: MoorDynRod,
        t: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the line number of segments\n\n The number of nodes is equal to this value plus 1\n @param l The Moordyn line\n @param n The output number of nodes\n @return MOORDYN_INVALID_VALUE if a NULL line is provided, MOORDYN_SUCCESS\n otherwise"]
    pub fn MoorDyn_GetRodN(l: MoorDynRod, n: *mut ::std::os::raw::c_uint) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the line number of nodes\n @param l The Moordyn line\n @param n The output number of nodes\n @return MOORDYN_INVALID_VALUE if a NULL line is provided, MOORDYN_SUCCESS\n otherwise\n @see MoorDyn_GetRodN()"]
    pub fn MoorDyn_GetRodNumberNodes(
        l: MoorDynRod,
        n: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get a line node position\n @param l The Moordyn line\n @param i The node index\n @param pos The output node position\n @return MOORDYN_INVALID_VALUE if a NULL line is provided or if the node\n index is bigger than the number of segments, MOORDYN_SUCCESS otherwise"]
    pub fn MoorDyn_GetRodNodePos(
        l: MoorDynRod,
        i: ::std::os::raw::c_uint,
        pos: *mut f64,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __MoorDynBody {
    _unused: [u8; 0],
}
#[doc = " A mooring line instance"]
pub type MoorDynBody = *mut __MoorDynBody;
extern "C" {
    #[doc = " @brief Get the body identifier\n @param b The Moordyn body\n @param id The output id\n @return MOORDYN_INVALID_VALUE if a NULL point is provided,\n MOORDYN_SUCCESS otherwise"]
    pub fn MoorDyn_GetBodyID(
        b: MoorDynBody,
        id: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the point type\n @param b The Moordyn body\n @param t The output type\n @return MOORDYN_INVALID_VALUE if a NULL point is provided,\n MOORDYN_SUCCESS otherwise\n @see Point::types"]
    pub fn MoorDyn_GetBodyType(
        b: MoorDynBody,
        t: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
